First draft of ArcticNet presentation

--- a/talk/ArcticKelp.bib
+++ b/talk/ArcticKelp.bib
@@ -18,4 +18,24 @@
   year={2018},
   publisher={Wiley Online Library}
 }
-
+@article{Madec2015,
+  title={NEMO ocean engine},
+  author={Madec, Gurvan and others},
+  year={2015},
+  publisher={Institut Pierre-Simon Laplace}
+}
+@article{Vancoppenolle2009,
+  title={Simulating the mass balance and salinity of Arctic and Antarctic sea ice. 1. Model description and validation},
+  author={Vancoppenolle, Martin and Fichefet, Thierry and Goosse, Hugues and Bouillon, Sylvain and Madec, Gurvan and Maqueda, Miguel Angel Morales},
+  journal={Ocean Modelling},
+  volume={27},
+  number={1-2},
+  pages={33--53},
+  year={2009},
+  publisher={Elsevier}
+}
+@article{Rousset2015,
+  title={The Louvain-La-Neuve sea ice model LIM3. 6: global and regional capabilities},
+  author={Rousset, Cl{\'e}ment and Vancoppenolle, Martin and Madec, Gurvan and Fichefet, Thierry and Flavoni, Simona and Barth{\'e}lemy, Antoine and Benshila, Rachid and Chanut, J{\'e}r{\^o}me and L{\'e}vy, Claire and Masson, S{\'e}bastien and others},
+  year={2015}
+}
