Many updated pictures etc.

--- a/talk/ArcticKelp.bib
+++ b/talk/ArcticKelp.bib
@@ -39,3 +39,13 @@
   author={Rousset, Cl{\'e}ment and Vancoppenolle, Martin and Madec, Gurvan and Fichefet, Thierry and Flavoni, Simona and Barth{\'e}lemy, Antoine and Benshila, Rachid and Chanut, J{\'e}r{\^o}me and L{\'e}vy, Claire and Masson, S{\'e}bastien and others},
   year={2015}
 }
+@article{Breiman2001,
+  title={Random forests},
+  author={Breiman, Leo},
+  journal={Machine learning},
+  volume={45},
+  number={1},
+  pages={5--32},
+  year={2001},
+  publisher={Springer}
+}
