--- a/talk/ArcticNet_scrolls_2019.Rmd
+++ b/talk/ArcticNet_scrolls_2019.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "**The relationship between Arctic kelps and their environment**"
-author: "Karen Filbee-Dexter, **Robert W. Schlegel**, Ladd E. Johnson, CJ Mundy, Kathleen MacGregor, Philippe Archambault"
+author: "**Robert W. Schlegel**, Karen Filbee-Dexter, Kathleen MacGregor, CJ Mundy, Kimberly Howland, Chris Mckindsey, Philippe Archambault, Ladd E. Johnson"
 # institute: "^1^Australia, ^2^Dalhousie, ^3^WHOI, ^4^Oher places"
 date: "December 5th, 2019"
 output:
@@ -15,7 +15,7 @@ output:
     theme: yeti
     toc: yes
     toc_float: yes
-# fontsize: 10pt
+fontsize: 14pt
 language: Australian
 css: acid.css
 # mainfont: PT Serif  
@@ -26,7 +26,7 @@ bibliography: ArcticKelp.bib
 # papersize: A4
 ---
 
-![](photo/alaria_1.jpg){ width=90%}
+![](photo/alaria_1.jpg){ width=90% }
 
 ***
 
@@ -38,17 +38,22 @@ bibliography: ArcticKelp.bib
 - In Canada, kelp has been reported and documented along Arctic and subarctic coastlines  
 - However, baseline measures of the extent of kelp communities are missing in much of the region   
 
-![](figure/kelp_question.png)
+![](figure/kelp_question.png){ width=90% }
 
 ***
 
 ## Future
 
--  Rapid environmental changes such as declining sea ice, increased ocean temperatures and freshwater inputs are occurring along these coasts 
+-  Rapid environmental changes, such as declining sea ice, increased ocean temperatures, and freshwater inputs are occurring along Canadian coasts 
 - Research suggests northern expansion of kelp forests with climate change
-- Therefore the relationships between environmental factors and the presence of kelp forests in the Canadian arctic are critical to understand 
+- Therefore, the relationships between environmental factors and the presence of kelp forests in the Canadian Arctic are critical to understand 
 
-![](figure/biomass measures for Canadian arctic.png)
+![](figure/biomass measures for Canadian arctic.png){ width=90% }
+
+<!-- <br> -->
+<!-- <br> -->
+<!-- <br> -->
+<!-- <br> -->
 
 ***
 
@@ -57,25 +62,21 @@ bibliography: ArcticKelp.bib
 <!-- SIMEP 2019: Saw that there is not as much soft-surface sediment as thought. Kelp forests there are as impressive as Ecklonia maxima. -->
 <!-- PICKeR: Eclipse Sound 2019 was mostly Agarum dominated. -->
 <!-- The amount of kelp cover in the Arctic is exceptionally higher than expected. -->
-<!-- The Arctic is currently thought to be very nuttient deprived. How will the eroding of Arctic coastlinesa affect this? -->
+<!-- The Arctic is currently thought to be very nutrient deprived. How will the eroding of Arctic coastlines affect this? -->
 
-- Where are kelp in the Arctic and what drives their distribution?
-- The Arctic is changing quickly so we should figure this out ASAP
-- Kelp abundance records (percent cover by species) were obtained from ArcticKelp project
+<!-- - Where are kelp in the Arctic and what drives their distribution? -->
+<!-- - The Arctic is changing quickly so we should figure this out ASAP -->
+
+<!-- - Kelp abundance records (% cover by species) were obtained from ArcticKelp project -->
+
 - This dive research conducted throughout the Canadian Arctic in 2014 - 2019 
     - 5 - 20 m photograph quadrats
-<!-- - These _in situ_ collected data will help us to know what the drivers kelp distributions are -->
-- Do these drivers differ for different functional groups?
-  - Total kelp cover
-  - Laminariales (Laminaria sp. + Sacharina sp.)
-  - Agarum
-  - Alaria
 
 ## Campaigns
 
 <!-- - Several different campaigns -->
 
-![](figure/study_site_campaign.png)
+![](figure/study_site_campaign.png){ width=90% }
 
 <!-- *** -->
 
@@ -90,59 +91,81 @@ bibliography: ArcticKelp.bib
 
 ## Mean cover
 <!-- May also be good to show species and/or kelp cover range -->
-![](figure/study_site_mean_cover.png)
+![](figure/study_site_mean_cover.png){ width=90% }
 
 ***
 
-# Environmental conditions {.tabset}
+## Question
+
+- Do the environmental drivers of kelp distribution differ for different functional groups?
+  - Total kelp cover
+  - Laminariales (Laminaria sp. + Sacharina sp.)
+  - Agarum
+  - Alaria
+
+***
+
+# Environmental drivers {.tabset}
 
 ## Abiotic data
 
 - NAPA (3-Oceans) model
   - Model outputs supplied by the Bedford Institute of Oceanography (BIO)  
-  ![](figure/BIO_logo.jpg){ width=20% }  
-  - Based on the NEMO community ocean model  
-  ![](figure/NEMO_logo.png){ width=20% }  
-  [@Madec2015]  
-  - Ice from the LIM3 model  
-  ![](figure/LIM_logo.png){ width=20% }  
-  [@Vancoppenolle2009; @Rousset2015]  
+  ![](figure/BIO_logo.jpg){ width=10% }  
+  - Based on the NEMO community ocean model [@Madec2015]    
+  ![](figure/NEMO_logo.png){ width=10% }  
+  - Ice from the LIM3 model [@Vancoppenolle2009; @Rousset2015]  
+  ![](figure/LIM_logo.png){ width=10% }  
   - Daily surface resolution: 1998 to 2015
   - Five day (pentad) resolution at 75 depth layers
   - Tri-polar grid
     - 10 to 20 km resolution  
-![](figure/NAPA_resolution_graph.png){ width=40% }
+![](figure/NAPA_resolution_graph.png){ width=20% }
 
 ***
 
 ## Biotic data
 
-- Bio-ORACLE
-  - 18 total geophysical, biotic, and environmental variables
+- Bio-ORACLE [@Tyberghein2012; @Assis2018b]  
+  - Geophysical, biotic, and environmental variables
   - Collection from many different datasets
   - Surface and benthic coverage
   - Data from 2000 - 2014 for most
   - Single values per pixel; min, mean, max, and range for most
   - 5 arcdegree spatial resolution (~9.2 km at the equator)
 
-[@Tyberghein2012; @Assis2018b]  
+<!-- <br>   -->
+<!-- <br>   -->
+<!-- <br>   -->
+<!-- <br>   -->
 
 ***
 
 # Modelling distribution {.tabset}
 
-- Using existing models, can we predict the % coverage of kelp?
+- Can we predict the % coverage of kelp groups?
 - Which variables are important?
 - What is the accuracy of the model?
-- What is the range in accuracy?
-- What is the distribution of inaccuracy?
+- How do models differ between groups?
 
 ## Methods
 
 - Highly correlated variables were removed
-- A random forest model was used
+- The rest were fed to a random forest model [@Breiman2001]
 - After many iterations the best variables were found
 - These best variables were used over many iterations again to find the best models
+
+<!-- <br> -->
+<!-- <br> -->
+<!-- <br> -->
+<!-- <br> -->
+<!-- <br> -->
+<!-- <br> -->
+<!-- <br>     -->
+<!-- <br>   -->
+<!-- <br>   -->
+
+***
 
 ## Variables {.tabset}
 
@@ -151,9 +174,16 @@ bibliography: ArcticKelp.bib
 ### Total kelp
 
 ```{r, echo=FALSE}
+suppressMessages(library(magrittr))
 load("data/top_full_kelpcover.RData")
-knitr::kable(x = top_full_kelpcover, format = "html")
+knitr::kable(x = top_full_kelpcover, format = "html") %>%
+  kableExtra::kable_styling(full_width = T, font_size = 20)
 ```
+
+<!-- <br> -->
+<!-- <br> -->
+<!-- <br> -->
+<!-- <br> -->
 
 ***
 
@@ -161,8 +191,14 @@ knitr::kable(x = top_full_kelpcover, format = "html")
 
 ```{r, echo=FALSE}
 load("data/top_full_laminariales.RData")
-knitr::kable(x = top_full_laminariales, format = "html")
+knitr::kable(x = top_full_laminariales, format = "html") %>%
+  kableExtra::kable_styling(full_width = T, font_size = 20)
 ```
+
+<!-- <br> -->
+<!-- <br> -->
+<!-- <br> -->
+<!-- <br> -->
 
 ***
 
@@ -170,8 +206,14 @@ knitr::kable(x = top_full_laminariales, format = "html")
 
 ```{r, echo=FALSE}
 load("data/top_full_agarum.RData")
-knitr::kable(x = top_full_agarum, format = "html")
+knitr::kable(x = top_full_agarum, format = "html") %>%
+  kableExtra::kable_styling(full_width = T, font_size = 20)
 ```
+
+<!-- <br> -->
+<!-- <br> -->
+<!-- <br> -->
+<!-- <br> -->
 
 ***
 
@@ -179,8 +221,14 @@ knitr::kable(x = top_full_agarum, format = "html")
 
 ```{r, echo=FALSE}
 load("data/top_full_alaria.RData")
-knitr::kable(x = top_full_alaria, format = "html")
+knitr::kable(x = top_full_alaria, format = "html") %>%
+  kableExtra::kable_styling(full_width = T, font_size = 20)
 ```
+
+<!-- <br> -->
+<!-- <br> -->
+<!-- <br> -->
+<!-- <br> -->
 
 ***
 
@@ -188,25 +236,25 @@ knitr::kable(x = top_full_alaria, format = "html")
 
 ### Total cover
 
-![](figure/conf_kelpcover.png)
+![](figure/conf_kelpcover.png){ width=90% }
 
 ***
 
 ### Laminariales
 
-![](figure/conf_laminariales.png)
+![](figure/conf_laminariales.png){ width=90% }
 
 ***
 
 ### Agarum
 
-![](figure/conf_agarum.png)
+![](figure/conf_agarum.png){ width=90% }
 
 ***
 
 ### Alaria
 
-![](figure/conf_alaria.png)
+![](figure/conf_alaria.png){ width=90% }
 
 ***
 
@@ -216,45 +264,58 @@ knitr::kable(x = top_full_alaria, format = "html")
 
 ## Total cover
 
-![](figure/prediction_kelpcover.png)
+![](figure/prediction_kelpcover.png){ width=90% }
 
 ***
 
 ## Laminariales
 
-![](figure/prediction_laminariales.png)
+![](figure/prediction_laminariales.png){ width=90% }
 
 ***
 
 ## Agarum
 
-![](figure/prediction_agarum.png)
+![](figure/prediction_agarum.png){ width=90% }
 
 ***
 
 ## Alaria
 
-![](figure/prediction_alaria.png)
+![](figure/prediction_alaria.png){ width=90% }
 
 <!-- ## Coastal stretch -->
 <!-- The thinking here was to show all of the coastal pixels as a histogram or something like that -->
 <!-- Perhaps a histogram of depth <50 would be useful -->
 
 ***
+
+# Conclusions
+
+- There should be quite a lot of kelp in the Arctic
+- There are different spatial projections for different groups
+- Alaria projections are likely incorrect and require more data
+- These projections provide a good platform for deciding future sampling locations
+
+***
+
 # Further work
 
 - Better screening of variables used in model
+- More thorough model testing
 - Increase resolution of data
+- Introduce substrate data
 
 ***
 
 # Acknowledgements
 
-Dr. Youyu Lu and Dr. Xianmin Hu for NAPA model access
+- Dr. Youyu Lu and Dr. Xianmin Hu for NAPA model access
 
-This research was undertaken thanks in part to funding from the Canada First Research Excellence Fund, through the Ocean Frontier Institute.  
-![](figure/ofi_logo.jpg)
-
+- This research was undertaken thanks in part to funding from the Canada First Research Excellence Fund, through the Ocean Frontier Institute.  
+  
+![](figure/ofi_logo.jpg){ width=50% }  
+  
 ***
 
 # References
