Working on ArcticNet 2020 talk

--- a/talk/ArcticKelp.bib
+++ b/talk/ArcticKelp.bib
@@ -49,3 +49,20 @@
   year={2001},
   publisher={Springer}
 }
+@article{Goldsmit2020,
+  title={What and where? Predicting invasion hotspots in the Arctic marine realm},
+  author={Goldsmit, Jesica and McKindsey, Christopher W and Schlegel, Robert W and Stewart, D Bruce and Archambault, Philippe and Howland, Kimberly L},
+  journal={Global change biology},
+  volume={26},
+  number={9},
+  pages={4752--4771},
+  year={2020},
+  publisher={Wiley Online Library}
+}
+@Manual{biomod2020,
+  title = {biomod2: Ensemble Platform for Species Distribution Modeling},
+  author = {Wilfried Thuiller and Damien Georges and Robin Engler and Frank Breiner},
+  year = {2020},
+  note = {R package version 3.4.6},
+  url = {https://CRAN.R-project.org/package=biomod2},
+}
